# backend/docs/swagger/swagger.json
@@ -1689,6 +1689,10 @@
         "dtos.TranscriptionTaskResponseDTO": {
             "type": "object",
             "properties": {
+                "recording_id": {
+                    "type": "string",
+                    "example": "uuid-v4"
+                },
                 "task_id": {
                     "type": "string",
                     "example": "abc-123"
